--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,22 +9,24 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="154dp"
-        android:layout_height="163dp"
+        android:layout_width="216dp"
+        android:layout_height="211dp"
+        android:layout_marginTop="80dp"
         android:orientation="vertical"
         android:src="@drawable/login_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="76dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
 
     <LinearLayout
         android:id="@+id/signIn_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="96dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,32 +104,34 @@
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/signUpButton"
-        android:layout_width="180dp"
-        android:layout_height="60dp"
-        android:text="Login"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:backgroundTint="#84A47C"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="534dp" />
-
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/signInButton"
-        android:layout_width="180dp"
+        android:layout_width="160dp"
         android:layout_height="60dp"
-        android:text="Register"
-        android:textColor="@color/black"
+        android:layout_margin="40dp"
+        android:backgroundTint="@color/maincolor"
+        android:fontFamily="@font/pretendard_bold"
+        android:text="로그인하기"
         android:textSize="16sp"
-        app:backgroundTint="#84A47C"
+        app:layout_constraintEnd_toStartOf="@+id/signUpButton"
+        app:layout_constraintHorizontal_bias="0.521"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signIn_layout"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/signUpButton"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_margin="40dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/maincolor"
+        android:fontFamily="@font/pretendard_bold"
+        android:text="회원가입"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
-        app:layout_constraintStart_toEndOf="@+id/signUpButton"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="534dp" />
+        app:layout_constraintTop_toBottomOf="@+id/signIn_layout"
+        tools:ignore="MissingConstraints" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
