--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -42,8 +42,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/detailImage"
-        app:layout_constraintBottom_toTopOf="@id/orderButton">
+        app:layout_constraintTop_toBottomOf="@id/detailImage">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -125,22 +124,52 @@
                 android:layout_height="wrap_content"
                 tools:itemCount="5"
                 tools:layout_height="wrap_content"
-                tools:listitem="@layout/item_menu"/>
+                tools:listitem="@layout/item_menu" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <Button
-        android:id="@+id/orderButton"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/orderButtonContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="결제하기"
-        android:textSize="16sp"
-        android:textColor="@color/white"
-        android:background="@drawable/button"
-        android:backgroundTint="@color/green"
-        android:layout_margin="16dp"
-        android:fontFamily="@font/pretendard_bold"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/orderButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="결제하기"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:background="@drawable/button"
+            android:backgroundTint="@color/green"
+            android:fontFamily="@font/pretendard_bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/cartCount"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/circle_background"
+            android:fontFamily="@font/pretendard_bold"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:gravity="center"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="10dp"
+            android:elevation="4dp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="@id/orderButton"
+            app:layout_constraintBottom_toTopOf="@id/orderButton"
+            tools:text="1"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
