--- a/app/src/main/res/layout/activity_paid.xml
+++ b/app/src/main/res/layout/activity_paid.xml
@@ -39,8 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/pretendard_black"
-        android:text="@string/order_completed_1"
-        android:textSize="20sp"
+        android:text="가게이름"
+        android:textSize="25sp"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/pretendard_bold"
-        android:text="@string/order_completed_2"
+        android:text="주문이 완료되었어요!"
         android:textSize="20sp"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/button"
