--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="20dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
@@ -12,8 +12,8 @@
         android:id="@+id/menuImage"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginStart="14dp"
         android:layout_gravity="center_vertical"
+        android:layout_marginStart="14dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,9 +22,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
         android:orientation="vertical"
-        android:padding="16dp"
-        android:layout_marginStart="80dp">
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/menuName"
